<resources>
    <string name="app_name">Tutor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Schedule">Расписание</string>
    <string name="Statistic">Статистика</string>
    <string name="Journal">Журнал</string>
    <string name="mainFragmentDialog">
       ● В вкладке \"Расписание\" представлен интерактивный календарь.\n\n
        Вы можете выбирать нужный Вам месяц, пролистывая календарь вправо и
        влево. \n\n
       ● При нажатии на любой день, вы увидите список занятий на день (если занятия указаны ранее).\n\n
       ● Для добавления занятия следует нажать на круглую кнопку, располагающуюся
        в правом нижнем углу экрана.\n\n
       ● При прокрутке списка учеников вниз, кнопка добавляения пропадет, для удобства
        удаления занятия. При прокрутке вверх - появится снова.\n\n
       ● Для удаления занятия следует нажать на корзину в строке с записью и подтвердить
        удаление.
    </string>
    <string name="journalFragmentDialog">
       ● В вкладке \"Журнал\" представлено два раздела: \"Журнал\" и \"Выпускники\".\n\n
       ● Раздел \"Журнал\" представляет собой список всех учеников с указанием номера в списке,
         Ф.И. и класса, в котором обучается ученик. \n\n
       ● Для добавления нового ученика в "Журнал" необходимо нажать круглу кнопку в правом нижнем углу экрана.\n\n
       ● При прокрутке списка учеников вниз, кнопка добавляения пропадет, для удобства
         удаления ученика. При прокрутке вверх - появляется снова.\n\n
       ● Для удаления занятия следует нажать и удерживать строку с учеником. В появившемся меню нажать
         \"корзину\" и подтвердить выбор.\n\n
       ● В вкладке \"Выпускники\" появляются удаленные из журнала ученики. Их можно восстановить в журнале, если нажать кнопку \"возврата\".
    </string>
    <string name="addStudentToSchedule">
       ● Выберите ученика из выпадающего списка.\n\n
       ● Установите время занятия. \n\n
       ● Выберете период добавления занятия: на день, на месяц, на полгода или на год. \n\n
       ● Выберете время оповещения о занятии: за 10, 15, 30 минут или совсем без оповещений. \n\n
       ● Нажмите \"Добавить\" для внесения занятия в расписание. \n\n
    </string>
    <string name="emptyStudent">
      Отсутсвуют ученики в разделе \"Журнал\". \n\n
      Пожалуйста добавьте ученика.
    </string>
    <string name="editStudentDialog">
      При редактировании параметров ученика, параметры записей занятий в \"Расписании\" и \"Статистике\" изменятся автоматически.
    </string>
    <string name="watchStudent">
        В этом разделе находится информация об ученике, а также список всех его занятий
    </string>
    <string name="addStudentToJournal">
       ● Заполните все поля с информацией об ученике.\n\n
       ● Нажмите кнопку \"Добавить\" для внесения ученика в список журнала.
    </string>
    <string name="statistic">
       ● В разделе \"Статистика\" представлено две вкладки: \"Доход\" и \"Занятия\".\n\n
       ● Вкладка \"Доход\" отображает графики дохода, полученного за определенный период (неделя, месяц, полгода и год).\n\n
       ● Вкладка \"Занятия\" отображает графики занятий, проведенных за определенный период (неделя, месяц, полгода и год).\n\n
       ● Учитываются все занятия, проведенные до настоящего времени.Будущие занятия не учитываются.
    </string>
    <string name="emptyWarning"> Заполните поле </string>
    <string name="hint">Подсказка</string>
    <string name="good">Хорошо</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="empty"> </string>
    <string name="toJournal">додавить ученика</string>
    <string name="close">закрыть</string>
    <string name="deleteQuestion">Вы действительно хотите удалить?</string>
    <string name="exitQuestion">Вы действительно хотите выйти из учетной записи?</string>
    <string name="warning">Предупреждение</string>
    <string name="warningText">Добавьте ученика в раздел \"Журнал\"!\n\n Невозможно добавить занятия без учеников.</string>
    <string name="delete">Удаление</string>
    <string name="foreverDelete">Подтверждая удаление вы навсегда удалите ученика и всю информацию о нем! \n\n Удалить?</string>
    <string name="name">Имя</string>
    <string name="lastName">Фамилия</string>
    <string name="schoolClass">Класс</string>
    <string name="price">Стоимость занятия</string>
    <string name="phone">Номер телефона</string>
    <string name="add">Добавить</string>
    <string name="edit">Изменить</string>
    <string name="Call">Позвонить</string>
    <string name="watch">Информация</string>
    <string name="save">Сохранить изменения</string>
    <string name="push_notification_channel_id" translatable="false">push-канал</string>
    <string name="push_notification_channel_name" translatable="false">Имя канала</string>
    <string name="push_message10" translatable="false">Занятие начнется 10 минут </string>
    <string name="push_message15" translatable="false">Занятие начнется 15 минут </string>
    <string name="push_message30" translatable="false">Занятие начнется 30 минут </string>
    <string name="push_tittle" translatable="false">Скоро занятие</string>
    <string name="period_setting" translatable="false">Выбор периода</string>
    <string name="notification_setting" translatable="false">Настройки уведомлений</string>
    <string name="tenMinutes" translatable="false">10 минут</string>
    <string name="fifteensMinutes" translatable="false">15 минут</string>
    <string name="thirteensMinutes" translatable="false">30 минут</string>
    <string name="cancelNotification" translatable="false">Выкл.</string>
    <string name="thisDayPeriod" translatable="false"> В этот день</string>
    <string name="thisDayPeriod1" translatable="false"> В этот же день</string>
    <string name="weekPeriod" translatable="false">В этот же день на неделю</string>
    <string name="monthPeriod" translatable="false">В этот же день на месяц</string>
    <string name="halfYearPeriod" translatable="false">В этот же день на полгода</string>
    <string name="yearPeriod" translatable="false">В этот же день на год</string>
    <string name="day" translatable="false">На день</string>
    <string name="day1" translatable="false">На этот день</string>
    <string name="week" translatable="false">На неделю</string>
    <string name="month" translatable="false">На месяц</string>
    <string name="halfYear" translatable="false">На полгода</string>
    <string name="year" translatable="false">На год</string>
    <string name="ten" translatable="false">10 мин.</string>
    <string name="fifteen" translatable="false">15 мин.</string>
    <string name="thirty" translatable="false">30 мин.</string>
    <string name="cancel" translatable="false">Выкл.</string>

</resources>